---- Changes since 3.89 ----
Updated the phpMyAdmin script installer to version 3.4.9, Drupal to 7.10, Moodle to 2.2.1, WordPress to 3.3.1, RoundCube to 0.7.1, SugarCRM to 6.3.1, SMF to 2.0.2, FosWiki to 1.1.4, WHMCS to 5.0.3, Dolibarr to 3.1.0, phpBB to 3.0.10, Bugzilla to 3.6.7, phpMyFAQ to 2.7.3, MediaWiki to 1.18.1, CMS Made Simple to 1.10.3, Magento to 1.6.2.0, TWiki to 5.1.1, ZenPhoto to 1.4.2, Joomla to 1.7.4, DokuWiki to 2012-01-25, and MoinMoin to 1.8.9.
Added a script installer for Autoload 4.4.7.
The script installer update process can now detect new installer releases that don't change the application version.
Added the modify-proxy API command, to update an existing proxy balancer.
The warning when multiple SSL sites share the same IP can now be disabled if your webserver supports SNI, via a new option on the Virtualmin Configuration page.
Backups now create a .dom file in the same directory as the tar.gz file, which contains information about the domains included and is used to speed up the restore process.
A new option on the Virtualmin Configuration page allows domain owners to restore backups made by root for their own domains. Because root backups are considered secure, the domain owner can restore all settings, including the Apache and DNS configuration.
Scheduled backups now have a separate deletion policy for each destination, instead of the same policy being applied to all destinations. For example, you could delete local backups after 5 days and remote backups after 10.
---- Changes since 3.90 ----
System statistics graphs now include the number of email messages received, bounced and greylisted. Statistic are also categorized by type, and when multiple stats are plotted at once the same axis is used for stats of the same type.
Updated the Drupal script installer to versions 6.24 and 7.12, ZenPhoto to 1.4.2.1, Autoload to 4.7.8, Horde to 3.3.13, IMP to 4.3.11, Horde Webmail to 1.2.11, and Joomla to 2.5.1 and 1.7.5.