@@ -1,0 +1,9 @@
+<header>S3-compatible server hostname</header>
+
+By default, Virtualmin will use Amazon's S3 backup service to upload domain
+backups using the S3 destination type. However, other companies offer compatible
+services, which you can switch to by entering a different S3 API server
+hostname here. <p>
+
+<footer>
+
