@@ -1333,3 +1333,4 @@ Scheduled backups now have a separate deletion policy for each destination, inst
 ---- Changes since 3.90 ----
 System statistics graphs now include the number of email messages received, bounced and greylisted. Statistic are also categorized by type, and when multiple stats are plotted at once the same axis is used for stats of the same type.
 Updated the Drupal script installer to versions 6.24 and 7.12, ZenPhoto to 1.4.2.1, Autoload to 4.7.8, Horde to 3.3.13, IMP to 4.3.11, Horde Webmail to 1.2.11, and Joomla to 2.5.1 and 1.7.5.
+Added a Virtualmin Configuration option to use an alternate S3-compatible backup service instead of Amazon's.
